# SafeStride

./: README.md  pyproject.toml
data/: rms_crime_incident_field_explanation.csv  rms_offense_codes.csv
notebooks/: 01_eda.ipynb  02_modeling.ipynb
