[tool.poetry]
name = "safestride"
version = "0.1.0"
description = ""
authors = ["Jason Zhang <jasonjzhang17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.32.3"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
pandas = "^2.2.2"
numpy = "^1.26.4"
geopandas = "^0.14.4"
shapely = "^2.0.4"
contextily = "^1.6.0"
geoplot = "^0.5.1"
folium = "^0.16.0"
plotly = "^5.22.0"
nbformat = "^5.10.4"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
